--- a/cart.service
+++ b/cart.service
@@ -2,7 +2,7 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=redis-dev.smitdevops.online
+Environment=REDIS_HOST=redis-dev.smitdevops.onlinE
 Environment=CATALOGUE_HOST=catalogue-dev.smitdevops.online
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
