--- a/payment.service
+++ b/payment.service
@@ -2,7 +2,7 @@
 Description=Payment Service
 
 [Service]
-User=root
+User=roboshop
 WorkingDirectory=/app
 Environment=CART_HOST=cart-dev.smitdevops.online
 Environment=CART_PORT=8080
